--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.6",
+    "chart.js": "^4.4.8",
     "express": "^4.18.2",
     "mime-types": "^3.0.1",
     "ng-zorro-antd": "^19.2.1",
